[project]
name = "github-api-core"
version = "0.0.1"
description = "ADHD Framework core: github_api_core"
requires-python = ">=3.11"
dependencies = [
    "logger-util",
    "exceptions-core",
    "temp-files-manager",
]

[project.urls]
Repository = "https://github.com/AI-Driven-Highspeed-Development/github_api_core.git"

[tool.adhd]
layer = "dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
dev-mode-dirs = [".."]
